--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,22 @@
-/* You can add global styles to this file, and also import other style files */
+@use "@angular/material" as mat;
+
+@include mat.core();
+
+$movies-primary: mat.define-palette(mat.$red-palette, 900);
+$movies-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+$movies-theme: mat.define-light-theme(
+    (
+        color: (
+            primary: $movies-primary,
+            accent: $movies-accent,
+        ),
+        typography: mat.define-typography-config(),
+        density: 0,
+    )
+);
+
+@include mat.all-component-themes($movies-theme);
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
